syntax/tests/parsing/errors/signature/closingBraces.resi
let x: int

}}}

let y: int
